tests/base/invalid/MethodCall_CompileFail_3.whiley


void ::main(System.Console sys,[string] this):
    this.f(1)
